<resources>
    <string name="app_name">Planechasers</string>
    <string name="_0">0</string>
    <string name="_40">40</string>
    <string name="reset">RESET</string>
    <string name="schemes">SCHEMES</string>
    <string name="planes">PLANES</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_3">PLAYER 3</string>
    <string name="player_4">PLAYER 4</string>
    <string name="random">random commanders</string>
    <string name="plane_card">Plane card</string>
    <string name="empty_planes">No planes yet</string>
    <string name="new_plane">Plane</string>
    <string name="life">life</string>
    <string name="empty_scheme">No scheme yet</string>
    <string name="scheme_card">Scheme card</string>
    <string name="new_scheme">scheme</string>
    <string name="ongoing">ongoing</string>
    <string name="archenemy">archenemy</string>
    <string name="classic">classic</string>
    <string name="background_for_player_1">background for player 1</string>
    <string name="background_for_player_2">background for player 2</string>
    <string name="background_for_player_3">background for player 3</string>
    <string name="background_for_player_4">background for player 4</string>
    <string name="increase_life_of_player_2">Increase life of player 2</string>
    <string name="increase_life_of_player_1">Increase life of player 1</string>
    <string name="increase_life_of_player_3">Increase life of player 3</string>
    <string name="increase_life_of_player_4">Increase life of player 4</string>
    <string name="move_to_plane_section">Move to plane section</string>
    <string name="reset_life">Reset life</string>
    <string name="decrease_life_of_player_4">Decrease life of player 4</string>
    <string name="decrease_life_of_player_3">Decrease life of player 3</string>
    <string name="decrease_life_of_player_2">Decrease life of player 2</string>
    <string name="decrease_life_of_player_1">Decrease life of player 1</string>
    <string name="increase_poison_damage_of_player_4_long_press_to_reset">Increase poison damage of player 4, long press to reset</string>
    <string name="increase_poison_damage_of_player_3_long_press_to_reset">Increase poison damage of player 3, long press to reset</string>
    <string name="increase_poison_damage_of_player_2_long_press_to_reset">Increase poison damage of player 2, long press to reset</string>
    <string name="increase_poison_damage_of_player_1_long_press_to_reset">Increase poison damage of player 1, long press to reset</string>
    <string name="increase_commander_damage_of_player_4_long_press_to_reset">Increase commander damage of player 4, long press to reset</string>
    <string name="increase_commander_damage_of_player_3_long_press_to_reset">Increase commander damage of player 3, long press to reset</string>
    <string name="increase_commander_damage_of_player_2_long_press_to_reset">Increase commander damage of player 2, long press to reset</string>
    <string name="increase_commander_damage_of_player_1_long_press_to_reset">Increase commander damage of player 1, long press to reset</string>
    <string name="move_to_scheme_section">move to scheme section</string>
    <string name="increase_commander_damage_of_archenemy_long_press_to_reset">increase commander damage of archenemy, long press to reset</string>
    <string name="increase_poison_damage_of_archenemy_long_press_to_reset">increase poison damage of archenemy, long press to reset</string>
    <string name="increase_poison_damage_of_heroes_long_press_to_reset">increase poison damage of heroes, long press to reset</string>
    <string name="background_for_archenemy">background for archenemy</string>
    <string name="background_for_hero_3">background for hero 3</string>
    <string name="background_for_hero_2">background for hero 2</string>
    <string name="background_for_hero_1">background for hero 1</string>
    <string name="reduce_life_of_archenemy">reduce life of archenemy</string>
    <string name="increase_life_of_archenemy">increase life of archenemy</string>
    <string name="decrease_life_of_heroes">decrease life of heroes</string>
    <string name="increase_life_of_heroes">increase life of heroes</string>
    <string name="increase_commander_damage_of_heroes_long_press_to_reset">increase commander damage of heroes, long press to reset</string>
    <string name="apri_galleria">Apri galleria</string>
    <string name="commander_choice_title">CHOOSE YOUR COMMANDER</string>
    <string name="_60">60</string>
    <string name="permanent_scheme_number_1">permanent scheme number 1</string>
    <string name="permanent_scheme_number_2">permanent scheme number 2</string>
    <string name="permanent_scheme_number_3">permanent scheme number 3</string>
    <string name="permanent_scheme_number_4">permanent scheme number 4</string>
    <string name="permanent_scheme_number_5">permanent scheme number 5</string>
    <string name="permanent_scheme_number_6">permanent scheme number 6</string>
    <string name="permanent_scheme_number_10">permanent scheme number 10</string>
    <string name="permanent_scheme_number_11">permanent scheme number 11</string>
    <string name="permanent_scheme_number_12">permanent scheme number 12</string>
    <string name="permanent_scheme_number_9">permanent scheme number 9</string>
    <string name="permanent_scheme_number_8">permanent scheme number 8</string>
    <string name="permanent_scheme_number_7">permanent scheme number 7</string>
</resources>