<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_life"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabiopievani.planechasers.archenemy.ArchenemyLife">

    <ImageView
        android:id="@+id/life_mask_archenemy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/life_mask_archenemy" />

    <ImageView
        android:id="@+id/bg_archenemy"
        android:contentDescription="@string/background_for_archenemy"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/bg_hero2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <ImageView
        android:id="@+id/bg_hero1"
        android:contentDescription="@string/background_for_hero_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bg_archenemy"
        app:layout_constraintStart_toEndOf="@id/bg_hero2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <ImageView
        android:id="@+id/bg_hero2"
        android:contentDescription="@string/background_for_hero_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bg_archenemy"
        app:layout_constraintStart_toEndOf="@id/bg_hero3"
        app:layout_constraintEnd_toStartOf="@id/bg_hero1"
        app:layout_constraintHorizontal_weight="1"
/>

    <ImageView
        android:id="@+id/bg_hero3"
        android:contentDescription="@string/background_for_hero_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="180"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bg_archenemy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bg_hero2"
        app:layout_constraintHorizontal_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/archenemy_planes_from_life"
        android:contentDescription="@string/move_to_plane_section"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_planes"
        android:fontFamily="@font/cerebri_bold"
        android:includeFontPadding="false"
        android:text="@string/planes"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.310"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/archenemy_schemes_from_life"
        android:contentDescription="@string/move_to_scheme_section"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_schemes"
        android:fontFamily="@font/cerebri_bold"
        android:includeFontPadding="false"
        android:text="@string/schemes"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.690"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/archenemy_reset"
        android:contentDescription="@string/reset_life"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:background="@drawable/button_reset"
        android:fontFamily="@font/cerebri"
        android:includeFontPadding="false"
        android:text="@string/reset"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.070"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.850" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus_archenemy"
        android:contentDescription="@string/reduce_life_of_archenemy"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.320"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_archenemy"
        android:contentDescription="@string/increase_life_of_archenemy"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@drawable/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus_heroes"
        android:contentDescription="@string/decrease_life_of_heroes"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:rotation="180"
        android:background="@drawable/button_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.680"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_heroes"
        android:contentDescription="@string/increase_life_of_heroes"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:rotation="180"
        android:background="@drawable/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.320"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <TextView
        android:id="@+id/archenemy_life_counter"
        android:background="@drawable/background_life_counter"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:fontFamily="@font/cerebri"
        android:gravity="center"
        android:includeFontPadding="false"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_60"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="72sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plus_archenemy"
        app:layout_constraintStart_toEndOf="@+id/minus_archenemy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750" />

    <TextView
        android:id="@+id/heroes_life_counter"
        android:rotation="180"
        android:background="@drawable/background_life_counter"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:fontFamily="@font/cerebri"
        android:gravity="center"
        android:includeFontPadding="false"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_60"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="72sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minus_heroes"
        app:layout_constraintStart_toEndOf="@+id/plus_heroes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/poison_dmg_archenemy_button"
        android:contentDescription="@string/increase_poison_damage_of_archenemy_long_press_to_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.670"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <TextView
        android:id="@+id/poison_dmg_archenemy"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cerebri"
        android:includeFontPadding="false"
        android:background="@drawable/button_poison_damage"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.670"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/poison_dmg_heroes_button"
        android:contentDescription="@string/increase_poison_damage_of_heroes_long_press_to_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.330"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060" />

    <TextView
        android:id="@+id/poison_dmg_heroes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cerebri"
        android:includeFontPadding="false"
        android:rotation="180"
        android:background="@drawable/button_poison_damage"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.330"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commander_dmg_archenemy_button"
        android:contentDescription="@string/increase_commander_damage_of_archenemy_long_press_to_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.330"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <TextView
        android:id="@+id/commander_dmg_archenemy"
        android:background="@drawable/button_commander_damage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cerebri"
        android:includeFontPadding="false"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.330"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/commander_dmg_heroes_button"
        android:contentDescription="@string/increase_commander_damage_of_heroes_long_press_to_reset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.670"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060" />

    <TextView
        android:id="@+id/commander_dmg_heroes"
        android:rotation="180"
        android:background="@drawable/button_commander_damage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="@font/cerebri"
        android:includeFontPadding="false"
        android:shadowColor="#000000"
        android:shadowRadius="2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.670"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060" />

    <ImageView
        android:id="@+id/swipe_life"
        android:contentDescription="@null"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty_view" />

</androidx.constraintlayout.widget.ConstraintLayout>