<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_scheme"
    tools:context="com.fabiopievani.planechasers.archenemy.Schemes">

    <ImageView
        android:id="@+id/appoggio_schemes"
        android:contentDescription="@string/empty_scheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty_scheme" />

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/schema"
        android:contentDescription="@string/scheme_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.38"
        app:layout_constraintHeight_percent="0.98"
        app:layout_constraintHorizontal_bias="0.80"
        app:srcCompat="@drawable/archenemy0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_scheme"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_new_plane"
        android:fontFamily="@font/cerebri_bold"
        android:text="@string/new_scheme"
        android:textColor="#BA000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.250"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/planes_from_schemes"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_planes"
        android:fontFamily="@font/cerebri_bold"
        android:text="@string/planes"
        android:textColor="#EBE8DB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.500" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/life_from_schemes"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_life"
        android:fontFamily="@font/cerebri_bold"
        android:text="@string/life"
        android:textColor="#EAEAEA"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permanent_schemes"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:background="@drawable/button_new_plane"
        android:fontFamily="@font/cerebri_bold"
        android:text="@string/ongoing"
        android:textColor="#BA000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <ImageView
        android:id="@+id/swipe_schemes"
        android:contentDescription="@null"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty_view" />

</androidx.constraintlayout.widget.ConstraintLayout>