<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_plane"
    tools:context="com.fabiopievani.planechasers.core.Planes">


    <ImageView
        android:id="@+id/appoggio_planes"
        android:contentDescription="@string/empty_planes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty_plane" />

    <com.ortiz.touchview.TouchImageView
        android:id="@+id/piano"
        android:contentDescription="@string/plane_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.67"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintHorizontal_bias="0.85"
        app:srcCompat="@drawable/plane100" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_plane"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_new_plane_or_scheme"
        android:fontFamily="@font/cerebri_bold"
        android:includeFontPadding="false"
        android:text="@string/new_plane"
        android:textColor="#BA000000"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.250" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/schemes_from_planes"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_schemes"
        android:fontFamily="@font/cerebri_bold"
        android:includeFontPadding="false"
        android:text="@string/schemes"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.500" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/life_from_planes"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:background="@drawable/button_life"
        android:fontFamily="@font/cerebri_bold"
        android:includeFontPadding="false"
        android:text="@string/life"
        android:textColor="#EAEAEA"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appoggio_planes"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.750" />

    <ImageView
        android:id="@+id/swipe_planes"
        android:contentDescription="@null"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/empty_view" />

</androidx.constraintlayout.widget.ConstraintLayout>